Improve footer css to avoid overflow

--- a/style.css
+++ b/style.css
@@ -188,7 +188,6 @@ h3 {
 }
 
 .footer {
-  position: relative;
   padding: 3em;
   text-align: center;
 }
@@ -199,7 +198,7 @@ h3 {
 
 @media (min-width: 28.125em) {
   .footer {
-    left: -1.3em;
+    text-indent: -2.5em;
   }
 }
 
@@ -213,7 +212,7 @@ h3 {
   }
 
   .footer {
-    left: 2em;
+    text-indent: 4.35em;
   }
 }
 
@@ -222,6 +221,7 @@ h3 {
   top: 0.25em;
   color: #ed5b65;
   font-size: 1.8em;
+  text-indent: 0;
 }
 
 a.resume {
